# ToolMind

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  skill_personality.md
.toolmind/: automation_audit.jsonl  memory.jsonl  self_reflections.jsonl
.toolmind/snapshots/: snapshot_20260503_173432.json  snapshot_20260503_173534.json
src/: gui_automation.rs  main.rs  vision_context.rs
